dia01a/initcontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: initcontainer
  name: initcontainer
  namespace: dia01a
spec:
  containers:
  - image: nginx
    name: initcontainer
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html
  volumes:
  - name: html
    emptyDir: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
