dia01a/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  creationTimestamp: null
  name: ingress-depreciado
  namespace: dia01a
spec:
  rules:
  - host: ingress-depreciado.local.lab
    http:
      paths:
      - backend:
          service:
            name: ingress-depreciado
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
